# RMS-nonROS

./: .gitignore  CMakeLists.txt  README.md
include/rms/: histogram.h  rms.h
src/: rms.cpp  test_rms.cpp
